syntax = "proto3";

option csharp_namespace = "JDBC.NET.Proto";

import "google/protobuf/empty.proto";
import "common.proto";

package proto.statement;

enum ParameterType {
  INT = 0;
  LONG = 1;
  SHORT = 2;
  FLOAT = 3;
  DOUBLE = 4;
  STRING = 5;
  BOOLEAN = 6;
  TIME = 7;
  DATE = 8;
}

service StatementService {
  rpc prepareStatement (PrepareStatementRequest) returns (PrepareStatementResponse);
  rpc createStatement (CreateStatementRequest) returns (CreateStatementResponse);
  rpc executeStatement (ExecuteStatementRequest) returns (JdbcResultSetResponse);
  rpc cancelStatement (CancelStatementRequest) returns (google.protobuf.Empty);
  rpc closeStatement (CloseStatementRequest) returns (google.protobuf.Empty);
  rpc setParameter (SetParameterRequest) returns (google.protobuf.Empty);
}

message PrepareStatementRequest {
  string connectionId = 1;
  string sql = 2;
}

message PrepareStatementResponse {
  string statementId = 1;
}

message CreateStatementRequest {
  string connectionId = 1;
}

message CreateStatementResponse {
  string statementId = 1;
}

message ExecuteStatementRequest {
  string statementId = 1;
  int32 fetchSize = 2;
  string sql = 3;
}

message CancelStatementRequest {
  string statementId = 1;
}

message CloseStatementRequest {
  string statementId = 1;
}

message SetParameterRequest {
  string statementId = 1;
  int32 index = 3;
  string value = 4;
  ParameterType type = 5;
}
